--- a/src/main/public/style.css
+++ b/src/main/public/style.css
@@ -245,7 +245,7 @@ a {
 #content pre {
     padding: 20px;
     font-size: 16px;
-    background: #F5F5F5;
+    background: #f8f8f8;
     border: 1px dashed #DDD;
 	margin-bottom: 20px;
     overflow: auto;
