--- a/src/main/public/style_v2.css
+++ b/src/main/public/style_v2.css
@@ -273,6 +273,30 @@ a {
     color: #000;
 }
 
+#content div.recent_posts {
+    float: right; 
+    width: 250px; 
+    background-color: #000; 
+    padding: 5px 10px; 
+    text-align: right; 
+    border-radius: 5px 0 0 5px;
+}
+
+#content div.recent_posts h3 {
+    color: #FFD500; 
+    margin: 0;
+}
+
+#content div.recent_posts ul {
+    list-style: none; 
+    margin: 0; 
+    padding: 0;
+}
+
+#content div.recent_posts ul li a {
+    color: #FFF;
+}
+
 #footer {
 	background-color: #000;
 	padding: 10px 0;
